--- a/FTGL.cabal
+++ b/FTGL.cabal
@@ -14,7 +14,7 @@ Synopsis:       Portable TrueType font rendering for OpenGL using the Freetype2 
 Build-Type:     Simple
 
 Library
-   Build-Depends: OpenGL, base
+   Build-Depends: base
    Exposed-Modules:
       Graphics.Rendering.FTGL
    extra-libraries: ftgl
