--- a/.travis.yml
+++ b/.travis.yml
@@ -58,6 +58,8 @@ before_install:
  - sudo add-apt-repository -y ppa:hvr/ghc
  - sudo apt-get update
  - sudo apt-get install cabal-install-1.18 ghc-$GHCVER
+ - sudo apt-get install libglfw-dev
+ - sudo apt-get install libftgl-dev
  - export PATH=/opt/ghc/$GHCVER/bin:$PATH
 
 install:
