--- a/FTGL.cabal
+++ b/FTGL.cabal
@@ -25,7 +25,7 @@ Library
    default-language: Haskell2010
 
 Executable ex1
-   Build-Depends: base >= 3 && <5, FTGL, OpenGL, GLFW-b
+   Build-Depends: base >= 3 && <5, text >= 0.11, FTGL, OpenGL, GLFW-b
    main-is:     ex1.hs
    hs-source-dirs: examples
    ghc-options: -Wall -O2
