--- a/FTGL.cabal
+++ b/FTGL.cabal
@@ -21,12 +21,12 @@ Library
    Build-Depends: base >= 3 && < 5, bytestring >= 0.10
    Exposed-Modules: Graphics.Rendering.FTGL
    extra-libraries: ftgl
-   ghc-options: -Wall -O2
+   ghc-options: -Wall
    default-language: Haskell2010
 
 Executable ex1
    Build-Depends: base >= 3 && <5, text >= 0.11, FTGL, OpenGL, GLFW-b
    main-is:     ex1.hs
    hs-source-dirs: examples
-   ghc-options: -Wall -O2
+   ghc-options: -Wall
    default-language: Haskell2010
