--- a/FTGL.cabal
+++ b/FTGL.cabal
@@ -24,9 +24,9 @@ Library
    ghc-options: -Wall
    default-language: Haskell2010
 
-Executable ex1
-   Build-Depends: base >= 3 && <5, text >= 0.11, FTGL, OpenGL, GLFW-b
-   main-is:     ex1.hs
-   hs-source-dirs: examples
-   ghc-options: -Wall
-   default-language: Haskell2010
+--Executable ex1
+--   Build-Depends: base >= 3 && <5, text >= 0.11, FTGL, OpenGL, GLFW-b
+--   main-is:     ex1.hs
+--   hs-source-dirs: examples
+--   ghc-options: -Wall
+--   default-language: Haskell2010
