--- a/FTGL.cabal
+++ b/FTGL.cabal
@@ -1,9 +1,9 @@
-Name:           FTGL
-Version:        1.333
+Name:           FTGL-bytestring
+Version:        2.0
 Cabal-Version:  >= 1.10
 License:        BSD3
 License-File:   LICENSE
-Author:         J.R. Heard, HIROKI,HATTORI <seagull.kamome@gmail.com>
+Author:         J.R. Heard, HIROKI,HATTORI
 Maintainer:     HIROKI,HATTORI <seagull.kamome@gmail.com>
 Category:       Graphics
 Description:    
@@ -25,7 +25,7 @@ Library
    default-language: Haskell2010
 
 --Executable ex1
---   Build-Depends: base >= 3 && <5, text >= 0.11, FTGL, OpenGL, GLFW-b
+--   Build-Depends: base >= 3 && <5, text >= 0.11, FTGL-bytestring, OpenGL, GLFW-b
 --   main-is:     ex1.hs
 --   hs-source-dirs: examples
 --   ghc-options: -Wall
