--- a/FTGL-bytestring.cabal
+++ b/FTGL-bytestring.cabal
@@ -27,9 +27,9 @@ Library
    ghc-options: -Wall
    default-language: Haskell2010
 
---Executable ex1
---   Build-Depends: base >= 3 && <5, text >= 0.11, FTGL-bytestring, OpenGL, GLFW-b
---   main-is:     ex1.hs
---   hs-source-dirs: examples
---   ghc-options: -Wall
---   default-language: Haskell2010
+Executable ex1
+   Build-Depends: base >= 3 && <5, text >= 0.11, FTGL-bytestring, OpenGL, GLFW-b
+   main-is:     ex1.hs
+   hs-source-dirs: examples
+   ghc-options: -Wall
+   default-language: Haskell2010
